--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
           body {
             margin: 0 auto;
             padding: 0;
+            font-family: Tahoma;
           }
         </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
